Edited html code

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</p>
 				<button class="header__button">read more</button>
 			</div>
-			<aside class="header__aside">
+			<div class="header__aside">
 				<p class="header__aside-heading">New</p>
 				<div class="header__aside-item">
 					<h2>
@@ -123,7 +123,7 @@
 						that means.
 					</p>
 				</div>
-			</aside>
+			</div>
 		</header>
 		<main class="main section-padding section-margin wrapper">
 			<section class="articles">
